temp/objects/RevRecRuleMilestone__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Amount__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Percent__c</fullName>
        <label>Actual Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Qty__c</fullName>
        <label>Actual Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milestone_Date_Source_Label__c</fullName>
        <inlineHelpText>Populate from code.</inlineHelpText>
        <label>Milestone Date Source Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Date_Source__c</fullName>
        <inlineHelpText>Populate from code.</inlineHelpText>
        <label>Milestone Date Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Date__c</fullName>
        <label>Milestone Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Name__c</fullName>
        <label>Milestone Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Sequence__c</fullName>
        <label>Milestone Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Amount__c</fullName>
        <label>Projected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Percent__c</fullName>
        <label>Projected Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Qty__c</fullName>
        <label>Projected Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RevRecRule__c</fullName>
        <label>RevRecRule</label>
        <referenceTo>RevRecRules__c</referenceTo>
        <relationshipLabel>RevRecRuleMilestones</relationshipLabel>
        <relationshipName>RevRecRuleMilestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Manual_Amount__c</fullName>
        <label>Sales Manual  Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Manual_Qty__c</fullName>
        <label>Sales Manual  Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>RevRecRuleMilestone</label>
    <nameField>
        <label>RevRecRuleMilestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RevRecRuleMilestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>